--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,11 @@ edition = "2021"
 [dependencies]
 # Remember to revert "dynamic_linking" this before releasing your game
 bevy = "0.12.1"
+bevy-inspector-egui = "0.21.0"
 #bevy = { version = "0.12.1", features = ["dynamic_linking"] }
 bevy_mod_picking = "0.17.0"
+#smooth-bevy-cameras = "0.10.0"
+smooth-bevy-cameras = { path = "../smooth-bevy-cameras" }
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
