--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,9 @@ bevy-inspector-egui = "0.21.0"
 bevy_mod_picking = "0.17.0"
 #smooth-bevy-cameras = "0.10.0"
 smooth-bevy-cameras = { path = "../smooth-bevy-cameras" }
+bevy_gltf_components = "0.2"
+bevy_asset_loader = { version = "0.19.1", features = ["3d"] }
+bevy_registry_export = "0.1.1"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
