--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,15 +7,9 @@ edition = "2021"
 
 [dependencies]
 # Remember to revert "dynamic_linking" this before releasing your game
-bevy = "0.12.1"
-bevy-inspector-egui = "0.21.0"
-#bevy = { version = "0.12.1", features = ["dynamic_linking"] }
-bevy_mod_picking = "0.17.0"
-#smooth-bevy-cameras = "0.10.0"
-smooth-bevy-cameras = { path = "../smooth-bevy-cameras" }
-bevy_gltf_components = "0.2"
-bevy_asset_loader = { version = "0.19.1", features = ["3d"] }
-bevy_registry_export = "0.1.1"
+bevy = { version = "0.15.0", features = ["dynamic_linking"] }
+bevy-inspector-egui = "0.28.0"
+smooth-bevy-cameras = "0.13.0"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
