--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,15 +5,6 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
-# Remember to revert "dynamic_linking" this before releasing your game
-bevy = { version = "0.15.0", features = ["dynamic_linking"] }
-bevy-inspector-egui = "0.28.0"
-bevy_tweening = "0.12.0"
-# https://docs.rs/smooth-bevy-cameras/latest/smooth_bevy_cameras/
-smooth-bevy-cameras = "0.13.0"
-
-# Enable a small amount of optimization in debug mode
 [profile.dev]
 opt-level = 1
 
@@ -21,3 +12,20 @@ opt-level = 1
 [profile.dev.package."*"]
 opt-level = 3
 
+
+[profile.wasm-release]
+inherits = "release"
+opt-level = "z" 
+lto = "fat"
+codegen-units = 1
+
+[lib]
+crate-type = ["cdylib", "rlib"]
+
+[dependencies]
+# Remember to revert "dynamic_linking" this before releasing your game
+bevy = { version = "0.15.0", features = ["dynamic_linking"] }
+#bevy-inspector-egui = "0.28.0"
+bevy_tweening = "0.12.0"
+# https://docs.rs/smooth-bevy-cameras/latest/smooth_bevy_cameras/
+smooth-bevy-cameras = "0.13.0"
