--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,7 +25,14 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 # Remember to revert "dynamic_linking" this before releasing your game
 bevy = { version = "0.15.0", features = ["dynamic_linking"] }
+bevy-tokio-tasks = "0.15.0"
 #bevy-inspector-egui = "0.28.0"
 bevy_tweening = "0.12.0"
+
+futures-util = "0.3"
+http-body-util = "0.1.2"
+hyper = { version = "1.6.0", features = ["server", "http1"] }
+pin-project-lite = "0.2.16"
 # https://docs.rs/smooth-bevy-cameras/latest/smooth_bevy_cameras/
 smooth-bevy-cameras = "0.13.0"
+tokio = { version = "1.43.0", features = ["net"] }
