--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,17 +25,19 @@ crate-type = ["cdylib", "rlib"]
 [dependencies]
 # Remember to revert "dynamic_linking" this before releasing your game
 bevy = { version = "0.15.0", features = ["dynamic_linking"] }
-bevy-tokio-tasks = "0.15.0"
 #bevy-inspector-egui = "0.28.0"
 bevy_tweening = "0.12.0"
-crossbeam-channel = "0.5.14"
 
-futures-util = "0.3"
-http-body-util = "0.1.2"
-hyper = { version = "1.6.0", features = ["server", "http1"] }
 pin-project-lite = "0.2.16"
-rand = "0.9.0"
-rand_chacha = "0.9.0"
 # https://docs.rs/smooth-bevy-cameras/latest/smooth_bevy_cameras/
 smooth-bevy-cameras = "0.13.0"
-tokio = { version = "1.43.0", features = ["net"] }
+
+## rand = "0.9.0"
+## rand_chacha = "0.9.0"
+
+## bevy-tokio-tasks = "0.15.0"
+## crossbeam-channel = "0.5.14"
+## tokio = { version = "1.43.0", features = ["net"] }
+## futures-util = "0.3"
+## http-body-util = "0.1.2"
+## hyper = { version = "1.6.0", features = ["server", "http1"] }
