--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,16 +24,16 @@ crate-type = ["cdylib", "rlib"]
 
 [dependencies]
 # Remember to revert "dynamic_linking" this before releasing your game
-bevy = { version = "0.15.0", features = ["dynamic_linking"] }
-#bevy-inspector-egui = "0.28.0"
+# bevy = { version = "0.15.0", features = ["dynamic_linking"] }
+bevy = "0.15.0"
+bevy_panorbit_camera = "0.22.1"
 bevy_tweening = "0.12.0"
 
-pin-project-lite = "0.2.16"
-# https://docs.rs/smooth-bevy-cameras/latest/smooth_bevy_cameras/
-smooth-bevy-cameras = "0.13.0"
+#bevy-inspector-egui = "0.28.0"
 
 ## rand = "0.9.0"
 ## rand_chacha = "0.9.0"
+## pin-project-lite = "0.2.16"
 
 ## bevy-tokio-tasks = "0.15.0"
 ## crossbeam-channel = "0.5.14"
