--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,8 @@ crate-type = ["cdylib", "rlib"]
 # Remember to revert "dynamic_linking" this before releasing your game
 # bevy = { version = "0.15.0", features = ["dynamic_linking"] }
 bevy = "0.15.0"
-bevy_panorbit_camera = "0.22.1"
+bevy-inspector-egui = "0.29.1"
+bevy_panorbit_camera = { version = "0.22.1", features = ["bevy_egui"] }
 bevy_tweening = "0.12.0"
 
 #bevy-inspector-egui = "0.28.0"
